--- a/package.json
+++ b/package.json
@@ -11,62 +11,33 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://www.github.com/jemccarthy13/ParrotSourLibrary"
+    "url": "https://www.github.com/jemccarthy13/parrotsour"
   },
   "dependencies": {
-    "@babel/plugin-transform-flow-strip-types": "^7.13.0",
-    "@babel/plugin-transform-typescript": "^7.14.3",
-    "@babel/preset-flow": "^7.13.13",
-    "@emotion/react": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^5.0.0-alpha.32",
-    "@material-ui/icons": "^4.11.2",
-    "@types/react": "^17.0.6",
-    "@types/react-dom": "^17.0.5",
-    "babel-plugin-add-module-exports": "^1.0.4",
-    "compromise": "^13.11.2",
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.1.0",
+    "@mui/material": "^5.1.0",
+    "@mui/styles": "^5.1.0",
+    "compromise": "^13.11.4",
     "compromise-sentences": "^0.3.0",
-    "jsdom-canvas-2": "^11.6.3-alpha.0",
-    "notistack": "^1.0.8",
+    "eslint-plugin-no-unsanitized": "^4.0.0",
+    "eslint-plugin-prototype-pollution-security-rules": "^1.0.6",
+    "notistack": "^2.0.3",
     "react": "^17.0.2",
-    "react-cookie-consent": "^6.2.3",
+    "react-cookie-consent": "^6.4.1",
     "react-dom": "^17.0.2",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router": "^6.0.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "^4.0.3",
-    "react-speech-recognition": "^3.8.0"
+    "react-speech-recognition": "^3.9.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.14.3",
-    "@babel/preset-env": "^7.14.2",
-    "@types/enzyme": "^3.10.8",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/history": "^4.7.8",
-    "@types/jest": "^26.0.23",
-    "@types/jsdom": "^16.2.10",
-    "@types/react-router": "^5.1.14",
-    "@types/react-router-dom": "^5.1.7",
-    "@types/react-speech-recognition": "^3.6.0",
-    "@typescript-eslint/eslint-plugin": "^4.24.0",
-    "@typescript-eslint/parser": "^4.24.0",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-speech-recognition": "^3.6.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.3",
-    "babel-plugin-macros": "^3.1.0",
-    "babel-plugin-rewire": "^1.2.0",
-    "babel-preset-env": "^1.7.0",
-    "canvas": "^2.8.0",
-    "cross-env": "^7.0.3",
     "enzyme": "^3.11.0",
-    "eslint-plugin-import": "^2.23.2",
-    "eslint-plugin-no-unsanitized": "^3.1.5",
-    "eslint-plugin-prototype-pollution-security-rules": "^1.0.6",
-    "eslint-plugin-react": "^7.23.2",
     "history": "^5.0.0",
-    "jest-canvas-mock": "^2.3.1",
-    "jest-canvas-snapshot-serializer": "^1.0.1",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
   },
   "scripts": {
@@ -78,7 +49,6 @@
     "clean": "rimraf dist && rimraf build && rimraf coverage",
     "clean-build": "npm run clean && npm install && npm run build",
     "eject": "react-scripts eject",
-    "wipe-artefacts": "npm run clean && rimraf package-lock.json && rimraf node_modules",
     "clint": "eslint src/**/*.{ts,tsx}",
     "clint-fixdr": "eslint src/**/*.{ts,tsx} --fix-dry-run",
     "clint-fix": "eslint src/**/*.{ts,tsx} --fix",
