--- a/package.json
+++ b/package.json
@@ -33,11 +33,16 @@
     "react-speech-recognition": "^3.9.0"
   },
   "devDependencies": {
+    "@mapbox/node-pre-gyp": "^1.0.6",
+    "@types/jest": "^27.0.2",
     "@types/react-dom": "^17.0.11",
     "@types/react-speech-recognition": "^3.6.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
+    "canvas": "^2.8.0",
     "enzyme": "^3.11.0",
     "history": "^5.0.0",
+    "jest-image-snapshot": "^4.5.1",
+    "jsdom-canvas-2": "^11.6.3-alpha.0",
     "typescript": "^4.2.4"
   },
   "scripts": {
