--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "compromise-sentences": "^0.3.0",
     "eslint-plugin-no-unsanitized": "^4.0.0",
     "eslint-plugin-prototype-pollution-security-rules": "^1.0.6",
+    "hasha": "^5.2.2",
     "notistack": "^2.0.3",
     "react": "^17.0.2",
     "react-cookie-consent": "^6.4.1",
@@ -33,7 +34,7 @@
     "react-speech-recognition": "^3.9.0"
   },
   "devDependencies": {
-    "@mapbox/node-pre-gyp": "^1.0.6",
+    "@types/enzyme": "^3.10.10",
     "@types/jest": "^27.0.2",
     "@types/react-dom": "^17.0.11",
     "@types/react-speech-recognition": "^3.6.1",
@@ -41,7 +42,6 @@
     "canvas": "^2.8.0",
     "enzyme": "^3.11.0",
     "history": "^5.0.0",
-    "jest-image-snapshot": "^4.5.1",
     "jsdom-canvas-2": "^11.6.3-alpha.0",
     "typescript": "^4.2.4"
   },
