default serialize canvas

--- a/package.json
+++ b/package.json
@@ -79,5 +79,8 @@
   },
   "resolutions": {
     "**/jsdom": "16.5.3"
+  },
+  "jest": {
+    "snapshotSerializers": ["./src/testutils/canvas-serializer.ts"]
   }
 }
