continue ci if error due to tests

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -27,5 +27,5 @@ jobs:
         files: ./clover.xml
         flags: unittest
         name: codecov-parrotsour
-        fail_ci_if_error: true 
+        fail_ci_if_error: false 
         verbose: true
