--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
     "@mui/styles": "^5.1.0",
     "compromise": "^13.11.4",
     "compromise-sentences": "^0.3.0",
-    "eslint-plugin-no-unsanitized": "^4.0.0",
-    "eslint-plugin-prototype-pollution-security-rules": "^1.0.6",
     "hasha": "^5.2.2",
     "notistack": "^2.0.3",
     "pretty-format": "^27.3.1",
@@ -39,9 +37,13 @@
     "@types/jest": "^27.0.3",
     "@types/react-dom": "^17.0.11",
     "@types/react-speech-recognition": "^3.6.1",
+    "@typescript-eslint/typescript-estree": "^5.4.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "canvas": "^2.8.0",
     "enzyme": "^3.11.0",
+    "eslint-plugin-no-unsanitized": "^4.0.0",
+    "eslint-plugin-prototype-pollution-security-rules": "^1.0.6",
+    "eslint-plugin-react": "^7.27.1",
     "history": "^5.0.0",
     "jsdom-canvas-2": "^11.6.3-alpha.0",
     "typescript": "^4.2.4"
