--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/icons-material": "^5.1.0",
     "@mui/material": "^5.1.0",
     "@mui/styles": "^5.1.0",
+    "babel-cli": "^6.26.0",
     "compromise": "^13.11.4",
     "compromise-sentences": "^0.3.0",
     "hasha": "^5.2.2",
@@ -38,9 +39,9 @@
     "@types/jest": "^27.0.3",
     "@types/react-dom": "^17.0.11",
     "@types/react-speech-recognition": "^3.6.1",
-    "@typescript-eslint/typescript-estree": "^5.4.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
     "canvas": "^2.8.0",
+    "cross-env": "^7.0.3",
     "enzyme": "^3.11.0",
     "eslint-plugin-no-unsanitized": "^4.0.0",
     "eslint-plugin-prototype-pollution-security-rules": "^1.0.6",
