compilation removed json as a dependency

--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "json --in-place -f package.json -e 'this.homepage=\"http://www.parrotsour.com\"' && react-scripts build",
+    "build": "react-scripts build",
     "build-standalone": "json --in-place -f package.json -e 'this.homepage=\".\"' && react-scripts build",
     "compile": "npm run clean && cross-env NODE_ENV=production babel src --extensions \".ts,.js,.tsx,.jsx\" --out-dir dist --no-copy-ignored",
     "pub": "npm run compile && npm publish",
