--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "parrotsour-components",
-  "version": "4.1.1",
+  "version": "4.1.2",
   "private": false,
   "license": "MIT",
   "homepage": "http://www.parrotsour.com",
@@ -15,46 +15,47 @@
     "url": "https://www.github.com/jemccarthy13/parrotsour"
   },
   "dependencies": {
-    "@emotion/react": "^11.6.0",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.1.0",
-    "@mui/material": "^5.1.0",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.0",
+    "@mui/material": "^5.5.0",
     "@mui/styles": "^5.1.0",
     "compromise": "^13.11.4",
     "compromise-sentences": "^0.3.0",
     "hasha": "^5.2.2",
     "notistack": "^2.0.3",
-    "pretty-format": "^27.3.1",
+    "pretty-format": "^27.5.1",
     "react": "^17.0.2",
-    "react-cookie-consent": "^6.4.1",
+    "react-cookie-consent": "^7.3.1",
     "react-dom": "^17.0.2",
-    "react-router": "^6.0.2",
-    "react-router-dom": "^6.0.2",
-    "react-scripts": "^4.0.3",
+    "react-router": "^6.2.2",
+    "react-router-dom": "^6.2.2",
+    "react-scripts": "^5.0.0",
     "react-speech-recognition": "^3.9.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.16.0",
-    "@babel/core": "^7.16.0",
-    "@babel/node": "^7.16.0",
-    "@babel/plugin-proposal-class-properties": "^7.16.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.16.0",
-    "@babel/preset-env": "^7.16.4",
-    "@babel/preset-typescript": "^7.16.0",
-    "@types/enzyme": "^3.10.10",
-    "@types/jest": "^27.0.3",
-    "@types/react-dom": "^17.0.11",
+    "@babel/cli": "^7.17.6",
+    "@babel/core": "^7.17.5",
+    "@babel/node": "^7.16.8",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-proposal-object-rest-spread": "^7.17.3",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
+    "@types/enzyme": "^3.10.11",
+    "@types/jest": "^27.4.1",
+    "@types/react-dom": "^17.0.13",
+    "@types/react-router": "^5.1.18",
     "@types/react-speech-recognition": "^3.6.1",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
-    "canvas": "^2.8.0",
+    "canvas": "^2.9.0",
     "cross-env": "^7.0.3",
     "enzyme": "^3.11.0",
-    "eslint-plugin-no-unsanitized": "^4.0.0",
+    "eslint-plugin-no-unsanitized": "^4.0.1",
     "eslint-plugin-prototype-pollution-security-rules": "^1.0.6",
-    "eslint-plugin-react": "^7.27.1",
-    "history": "^5.0.0",
+    "eslint-plugin-react": "^7.29.3",
+    "history": "^5.3.0",
     "jsdom-canvas-2": "^11.6.3-alpha.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
