--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "coverage": "npm run test -- --coverage --detectOpenHandles",
     "test": "react-scripts test --watchAll",
     "ci-coverage": "npm run ci-test -- --coverage",
-    "ci-test": "react-scripts test --maxWorkers=75% --watchAll=false"
+    "ci-test": "react-scripts test --maxWorkers=75% --watchAll=false --silent"
   },
   "eslintConfig": {
     "extends": [
