--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
-    "@mui/styles": "^5.11.2",
     "compromise": "^13.11.4",
     "compromise-sentences": "^0.3.0",
     "hasha": "^5.2.2",
@@ -31,7 +30,9 @@
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.1",
-    "react-speech-recognition": "^3.10.0"
+    "react-speech-recognition": "^3.10.0",
+    "styled-components": "^5.3.6",
+    "tss-react": "^4.5.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.20.7",
@@ -46,6 +47,7 @@
     "@types/react-dom": "^18.0.10",
     "@types/react-router": "^5.1.20",
     "@types/react-speech-recognition": "^3.9.0",
+    "@types/styled-components": "^5.1.26",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.8.0",
     "canvas": "^2.11.0",
     "cross-env": "^7.0.3",
