--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint-plugin-react": "^7.32.0",
     "eslint-plugin-regexp": "^1.12.0",
     "history": "^5.3.0",
+    "husky": "^8.0.3",
     "jest": "^29.3.1",
     "jest-config": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
