chore: updated final deps and rm unused packages

--- a/.eslintrc
+++ b/.eslintrc
@@ -122,7 +122,14 @@
     "react/prefer-stateless-function": "error",
     "react/prop-types": "error",
     "react/react-in-jsx-scope": "error",
-    "react/require-default-props": "error",
+    "react/require-default-props": [
+      2,
+      {
+        "forbidDefaultForRequired": true,
+        "classes": "defaultProps",
+        "functions": "defaultArguments"
+      }
+    ],
     "react/require-optimization": "error",
     "react/require-render-return": "error",
     "react/self-closing-comp": "error",
