--- a/package.json
+++ b/package.json
@@ -31,29 +31,24 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.1",
     "react-speech-recognition": "^3.10.0",
-    "styled-components": "^5.3.6",
-    "tss-react": "^4.5.2"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.20.7",
     "@babel/core": "^7.20.12",
-    "@babel/node": "^7.20.7",
     "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
-    "@testing-library/dom": "^8.19.1",
-    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/enzyme": "^3.10.12",
     "@types/jest": "^29.2.5",
     "@types/react-dom": "^18.0.10",
     "@types/react-router": "^5.1.20",
     "@types/react-speech-recognition": "^3.9.0",
     "@types/styled-components": "^5.1.26",
-    "canvas": "^2.11.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
     "cross-env": "^7.0.3",
     "eslint-plugin-import": "^2.27.4",
     "eslint-plugin-no-unsanitized": "^4.0.2",
@@ -63,9 +58,6 @@
     "history": "^5.3.0",
     "husky": "^8.0.3",
     "jest": "^29.3.1",
-    "jest-config": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
-    "jsdom-canvas-2": "^11.6.3-alpha.0",
     "typescript": "^4.9.4"
   },
   "scripts": {
