--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "4.2.0",
   "private": false,
   "license": "MIT",
-  "homepage": "http://www.parrotsour.com",
+  "homepage": "https://www.parrotsour.com",
   "main": "dist/index.tsx",
   "files": [
     "dist",
