--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "history": "^5.3.0",
     "husky": "^8.0.3",
     "jest": "^29.3.1",
+    "jest-fetch-mock": "^3.0.3",
     "typescript": "^4.9.4"
   },
   "scripts": {
