--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.1",
-    "react-speech-recognition": "^3.10.0",
-    "styled-components": "^5.3.6"
+    "react-speech-recognition": "^3.10.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.20.7",
@@ -46,7 +45,6 @@
     "@types/react-dom": "^18.0.10",
     "@types/react-router": "^5.1.20",
     "@types/react-speech-recognition": "^3.9.0",
-    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "cross-env": "^7.0.3",
