--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_VERSION=$npm_package_version
 REACT_APP_NAME=$npm_package_name
 REACT_APP_MAINTENANCE=false
+REACT_APP_SUPPORTS_WEBSPEECH=false
