--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,7 @@
     "baseUrl": "src",
     "noFallthroughCasesInSwitch": true,
     "target": "es6",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -21,7 +17,5 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": [
-    "src",
-    "src/__tests__" ]
+  "include": ["src", "src/__tests__"]
 }
