migrate to vitest, deprecate some configs, update tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src", "src/__tests__"]
+  "include": ["src", "src/__tests__", "cleansnapshots.mjs"]
 }
