--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "parrotsour-components",
-  "version": "4.2.1",
+  "version": "4.2.2",
   "private": false,
   "license": "MIT",
   "homepage": "https://www.parrotsour.com",
@@ -15,6 +15,9 @@
     "url": "https://www.github.com/jemccarthy13/parrotsour"
   },
   "dependencies": {
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.7",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
     "compromise": "^14.11.0",
@@ -28,15 +31,8 @@
     "react-speech-recognition": "^3.10.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.23.4",
-    "@babel/core": "^7.23.7",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-env": "^7.23.8",
-    "@babel/preset-react": "^7.23.3",
-    "@babel/preset-typescript": "^7.23.3",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.11",
     "@types/react-dom": "^18.2.18",
     "@types/react-router": "^5.1.20",
     "@types/react-speech-recognition": "^3.9.5",
@@ -51,11 +47,14 @@
     "hasha": "^6.0.0",
     "history": "^5.3.0",
     "husky": "^8.0.3",
-    "jest": "^29.7.0",
     "jest-fetch-mock": "^3.0.3",
+    "jsdom": "^23.2.0",
     "pretty-format": "^29.7.0",
     "react-scripts": "^5.0.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vite": "^5.0.11",
+    "vitest": "^1.2.0",
+    "vitest-canvas-mock": "^0.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -64,12 +63,13 @@
     "compile": "npm run clean && cross-env NODE_ENV=production babel src --extensions \".ts,.js,.tsx,.jsx\" --out-dir dist --no-copy-ignored",
     "pub": "npm run compile && npm publish",
     "clean": "rimraf dist && rimraf build && rimraf coverage",
+    "clean-ss": "node cleansnapshots.mjs",
     "clean:build": "npm run clean && npm install && npm run build",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.{ts,tsx}",
     "lint:fixdr": "eslint src/**/*.{ts,tsx} --fix-dry-run",
     "lint:fix": "eslint src/**/*.{ts,tsx} --fix",
-    "test": "react-scripts test --watchAll=false --maxWorkers=75%",
+    "test": "vitest --environment jsdom",
     "test:coverage": "npm run test -- --coverage",
     "test:watch": "react-scripts test --watchAll --maxWorkers=75%",
     "ci-coverage": "npm run ci-test -- --coverage",
@@ -95,15 +95,5 @@
   },
   "resolutions": {
     "**/jsdom": "16.5.3"
-  },
-  "jest": {
-    "snapshotSerializers": [
-      "./src/testutils/canvas-serializer.ts"
-    ],
-    "coveragePathIgnorePatterns": [
-      "./src/components/procedural/ai.js",
-      "./src/components/procedural/aiprocess.js",
-      "./src/ai/*"
-    ]
   }
 }
