--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@types/react-speech-recognition": "^3.9.5",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
+    "@vitest/coverage-istanbul": "^1.2.0",
+    "@vitest/coverage-v8": "^1.2.0",
     "cross-env": "^7.0.3",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-no-unsanitized": "^4.0.2",
@@ -47,14 +49,15 @@
     "hasha": "^6.0.0",
     "history": "^5.3.0",
     "husky": "^8.0.3",
-    "jest-fetch-mock": "^3.0.3",
     "jsdom": "^23.2.0",
     "pretty-format": "^29.7.0",
     "react-scripts": "^5.0.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
+    "vite-plugin-svgr": "^4.2.0",
     "vitest": "^1.2.0",
-    "vitest-canvas-mock": "^0.3.3"
+    "vitest-canvas-mock": "^0.3.3",
+    "vitest-fetch-mock": "^0.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -69,7 +72,7 @@
     "lint": "eslint src/**/*.{ts,tsx}",
     "lint:fixdr": "eslint src/**/*.{ts,tsx} --fix-dry-run",
     "lint:fix": "eslint src/**/*.{ts,tsx} --fix",
-    "test": "vitest --environment jsdom",
+    "test": "vitest --environment jsdom --maxWorkers=75 --coverage",
     "test:coverage": "npm run test -- --coverage",
     "test:watch": "react-scripts test --watchAll --maxWorkers=75%",
     "ci-coverage": "npm run ci-test -- --coverage",
