--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -2,28 +2,28 @@ name: CodecovReport
 
 on:
   push:
-    branches: [ main,ps-dev ]
+    branches: [main, ps-dev]
 
 jobs:
-  run: 
+  run:
     runs-on: ${{ matrix.os }}
-    strategy: 
-      matrix: 
-        os: [ubuntu-latest,macos-latest,windows-latest]
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
-    - uses: actions/checkout@master
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: 14.x
-        cache: 'npm'
-    - name: Install
-      run: npm install
-    - name: Generate coverage report
-      run: npm run ci-coverage
-      continue-on-error: true
-    - uses: codecov/codecov-action@v2
-      with:
-        flags: unittest
-        fail_ci_if_error: false 
-        verbose: true
+      - uses: actions/checkout@master
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14.x
+          cache: "npm"
+      - name: Install
+        run: npm install --force
+      - name: Generate coverage report
+        run: npm run ci-coverage
+        continue-on-error: true
+      - uses: codecov/codecov-action@v2
+        with:
+          flags: unittest
+          fail_ci_if_error: false
+          verbose: true
