--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_VERSION=$npm_package_version
-REACT_APP_DATE=25 Jan 2024
+REACT_APP_DATE="25 Jan 2024"
 REACT_APP_NAME=$npm_package_name
 REACT_APP_MAINTENANCE=false
