--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -12,17 +12,17 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - uses: actions/checkout@master
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+      - name: Use Node.js 20.x
+        uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.x
           cache: "npm"
       - name: Install
         run: npm install --force
       - name: Generate coverage report
         run: npm run ci-coverage
         continue-on-error: true
-      - uses: codecov/codecov-action@v2
+      - uses: codecov/codecov-action@v4
         with:
           flags: unittest
           fail_ci_if_error: false
