--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "parrotsour-components",
-  "version": "4.2.2",
+  "version": "4.2.3",
   "private": false,
   "license": "MIT",
   "homepage": "https://www.parrotsour.com",
@@ -15,31 +15,33 @@
     "url": "https://www.github.com/jemccarthy13/parrotsour"
   },
   "dependencies": {
-    "@babel/cli": "^7.23.4",
-    "@babel/core": "^7.23.7",
+    "@babel/cli": "^7.25.9",
+    "@babel/core": "^7.26.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@mui/icons-material": "^5.15.4",
-    "@mui/material": "^5.15.4",
-    "compromise": "^14.11.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.6",
+    "@mui/material": "^6.1.6",
+    "compromise": "^14.14.2",
     "compromise-sentences": "^0.3.0",
     "notistack": "^3.0.1",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-cookie-consent": "^9.0.0",
-    "react-dom": "^18.2.0",
-    "react-router": "^6.21.2",
-    "react-router-dom": "^6.21.2",
+    "react-dom": "^18.3.1",
+    "react-router": "^6.27.0",
+    "react-router-dom": "^6.27.0",
     "react-speech-recognition": "^3.10.0"
   },
   "devDependencies": {
-    "@testing-library/react": "^14.1.2",
+    "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
-    "@types/react-dom": "^18.2.18",
+    "@types/react-dom": "^18.3.1",
     "@types/react-router": "^5.1.20",
     "@types/react-speech-recognition": "^3.9.5",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
-    "@vitest/coverage-istanbul": "^1.2.0",
-    "@vitest/coverage-v8": "^1.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.13.0",
+    "@typescript-eslint/parser": "^8.13.0",
+    "@vitest/coverage-istanbul": "^2.1.4",
+    "@vitest/coverage-v8": "^2.1.4",
     "cross-env": "^7.0.3",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-no-unsanitized": "^4.0.2",
@@ -49,15 +51,15 @@
     "hasha": "^6.0.0",
     "history": "^5.3.0",
     "husky": "^9.0.11",
-    "jsdom": "^24.0.0",
+    "jsdom": "^25.0.1",
     "pretty-format": "^29.7.0",
     "react-scripts": "^5.0.1",
-    "typescript": "^5.3.3",
+    "typescript": "^5.6.3",
     "vite": "^5.0.11",
     "vite-plugin-svgr": "^4.2.0",
-    "vitest": "^1.2.0",
+    "vitest": "^2.1.4",
     "vitest-canvas-mock": "^0.3.3",
-    "vitest-fetch-mock": "^0.2.2"
+    "vitest-fetch-mock": "^0.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
